--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,7 +146,11 @@ body {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefits article{
+    margin-bottom: 32px;
+    color: #ffffff;
+}
+/* .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -159,9 +163,13 @@ body {
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
-}
+} */
 
-.benefit-lead h3 {
+.benefits h3{
+    margin-bottom: 10px;
+    text-align: center;
+}
+/* .benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
 }
@@ -174,9 +182,9 @@ body {
 .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
-}
+} */
 
-#benefitImage{
+.benefits img{
     display: block;
     margin: 10px auto;
     max-width: 150px;
