changed the repetative classes for the .content class into a single combinator class

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,17 @@ body {
     display: inline-block;
     margin-left: 20px;
 }
-.search-engine-optimization {
+
+.content article{
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+/* .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -104,9 +114,13 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
+} */
+
+.content img{
+    max-height: 200px;
 }
 
-.search-engine-optimization img {
+/* .search-engine-optimization img {
     max-height: 200px;
 }
 
@@ -116,9 +130,14 @@ body {
 
 .social-media-marketing img {
     max-height: 200px;
+} */
+
+.content h2{
+    margin-bottom: 20px;
+    font-size: 36px;
 }
 
-.search-engine-optimization h2 {
+/* .search-engine-optimization h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -131,7 +150,7 @@ body {
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
-}
+} */
 /* End Primary Content */
 
 /* Begin Benefits Content */
